--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -28,7 +28,7 @@
 
 @font-face {
   font-family: "Chronicle";
-  src: url("/fonts/ChronicleSemiBold.ttf") format("truetype");
+  src: url("/fonts/ChronicleSemibold.otf") format("truetype");
   font-style: normal;
   font-weight: 400;
 }
